add gameManager;